--- a/style.css
+++ b/style.css
@@ -103,17 +103,17 @@
 				/* background-color: royalblue; */
 			}
 			.penSize>div:first-child {
-				border: 1px solid black;
+				border: 1px solid white;
 				width: 4vh;
 				margin: 1.3vh auto 0;
 			}
 			.penSize>div:nth-child(2) {
-				border: 2px solid black;
+				border: 2px solid white;
 				width: 4vh;
 				margin: 1vh auto 0;
 			}
 			.penSize>div:nth-child(3) {
-				border: 3px solid black;
+				border: 3px solid white;
 				width: 4vh;
 				margin: 1vh auto 0;
 			}
@@ -135,32 +135,32 @@
 				overflow: hidden;
 			}
 			#lineWidth-hidden>div:first-child>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 1px;
 				margin: 24.5px auto;
 			}
 			#lineWidth-hidden>div:nth-child(2)>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 2px;
 				margin: 24px auto;
 			}
 			#lineWidth-hidden>div:nth-child(3)>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 4px;
 				margin: 23px auto;
 			}
 			#lineWidth-hidden>div:nth-child(4)>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 8px;
 				margin: 21px auto 0;
 			}
 			#lineWidth-hidden>div:nth-child(5){
 				font-weight: bold;
-				color: #1E395B;
+				color: #000000;
 				text-align: center;
 			}
 			#lineWidth-hidden input {
@@ -175,7 +175,7 @@
 				font-size: 10px;
 			}
 			#lineWidth-hidden div:hover {
-				background-color: #FFA500;
+				background-color: #717171;
 			}
 			
 /* 工具项 */
