--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 				border-radius: 50%;
 			}
 			.penColor:active {
-				box-shadow: 0 0 10px 2px royalblue;
+				box-shadow: 0 0 10px 2px rgb(100, 225, 65);
 			}
 			#penColor-hidden {
 				width: calc(10vh + 6px);
@@ -57,7 +57,7 @@
 				width: 5vh;
 				height: 5vh;
 				/* border-radius: 50%; */
-				background-color: white;
+				background-color: rgb(193, 193, 193);
 				/* box-shadow: 0 0 2px 1px gray inset; */
 				/* border: 1px solid gray; */
 			}
@@ -74,22 +74,23 @@
 				transform: scale(1.2);
 			}
 			.penColorItem:first-child>div {
-				background-color: black;
+				background-color: rgb(0, 0, 0);
 			}
 			.penColorItem:nth-child(2)>div {
-				background-color: red;
+				background-color: rgb(255, 0, 0);
 			}
 			.penColorItem:nth-child(3)>div {
-				background-color: blue;
+				background-color: rgb(255, 174, 0);	
 			}
 			.penColorItem:nth-child(4)>div {
-				background-color: orange;
-			}
+				background-color: rgb(17, 255, 29);
+				}
 			.penColorItem:nth-child(5)>div {
-				background-color: green;
+				background-color: rgb(4, 0, 255);
 			}
 			.penColorItem:nth-child(6)>div {
-				background-color: gray;
+				background-color: rgb(195, 0, 255);
+				
 			}
 /* 画笔粗细 */
 			.penSize {
@@ -99,21 +100,21 @@
 				border-radius: 50%;
 			}
 			.penSize:active {
-				box-shadow: 0 0 10px 2px royalblue;
+				box-shadow: 0 0 10px 2px rgb(100, 225, 65);
 				/* background-color: royalblue; */
 			}
 			.penSize>div:first-child {
-				border: 1px solid black;
+				border: 1px solid rgb(0, 0, 0);
 				width: 4vh;
 				margin: 1.3vh auto 0;
 			}
 			.penSize>div:nth-child(2) {
-				border: 2px solid black;
+				border: 2px solid rgb(0, 0, 0);
 				width: 4vh;
 				margin: 1vh auto 0;
 			}
 			.penSize>div:nth-child(3) {
-				border: 3px solid black;
+				border: 3px solid rgb(0, 0, 0);
 				width: 4vh;
 				margin: 1vh auto 0;
 			}
@@ -135,32 +136,32 @@
 				overflow: hidden;
 			}
 			#lineWidth-hidden>div:first-child>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 1px;
 				margin: 24.5px auto;
 			}
 			#lineWidth-hidden>div:nth-child(2)>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 2px;
 				margin: 24px auto;
 			}
 			#lineWidth-hidden>div:nth-child(3)>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 4px;
 				margin: 23px auto;
 			}
 			#lineWidth-hidden>div:nth-child(4)>div {
-				background-color: black;
+				background-color: #000000;
 				width: 7vw;
 				height: 8px;
 				margin: 21px auto 0;
 			}
 			#lineWidth-hidden>div:nth-child(5){
 				font-weight: bold;
-				color: #1E395B;
+				color: #000000;
 				text-align: center;
 			}
 			#lineWidth-hidden input {
@@ -175,7 +176,7 @@
 				font-size: 10px;
 			}
 			#lineWidth-hidden div:hover {
-				background-color: #FFA500;
+				background-color: #717171;
 			}
 			
 /* 工具项 */
@@ -186,8 +187,8 @@
 				border-radius: 50%;
 			}
 			.active {
-				box-shadow: 0 0 10px 2px royalblue;
-				background-color: royalblue;
+				box-shadow: 0 0 10px 2px rgb(100, 225, 65);
+				background-color: rgb(100, 225, 65);
 			}
 			#pen {
 				background: url('./img/pen.svg');
@@ -202,7 +203,7 @@
 				background-size: 6vh;
 			}
 			#clear:active {
-				box-shadow: 0 0 10px 2px royalblue;
+				box-shadow: 0 0 10px 2px rgb(100, 225, 65);
 				/* background-color: royalblue; */
 			}
 			#return {
@@ -210,7 +211,7 @@
 				background-size: 6vh;
 			}
 			#return:active {
-				box-shadow: 0 0 10px 2px royalblue;
+				box-shadow: 0 0 10px 2px rgb(100, 225, 65);
 				/* background-color: royalblue; */
 			}
 			#save {
@@ -218,7 +219,7 @@
 				background-size: 6vh;
 			}
 			#save:active {
-				box-shadow: 0 0 10px 2px royalblue;
+				box-shadow: 0 0 10px 2px rgb(100, 225, 65);
 			}
 			
 			@media screen and (max-width: 768px) {
